# CMimircache

./: .gitignore
CMimircache/: CMakeLists.txt  makefile  meson.build
CMimircache/cache/: AMP.c  ARC.c  CMakeLists.txt  FIFO.c  FIFOSize.c  LFU.c  LFUFast.c  LRFU.c  LRU.c  LRUPage.c  LRUSize.c  LRU_K.c  MRU.c  Mithril.c  Optimal.c  PG.c  Random.c  SLRU.c  SLRUML.c  Score.c  cache.c
CMimircache/cache/include/: AMP.h  ARC.h  FIFO.h  FIFOSize.h  LFU.h  LFUFast.h  LRU.h  LRUPage.h  LRUSize.h  LRU_K.h  MRU.h  Mithril.h  Optimal.h  PG.h  Random.h  SLRU.h  SLRUML.h  Score.h  cache.h
CMimircache/cacheReader/: binaryReader.c  csvReader.c  reader.c  vscsiReader.c
CMimircache/cacheReader/include/: binaryReader.h  csvReader.h  reader.h  vscsiReader.h
CMimircache/dataStructure/: CMakeLists.txt  pqueue.c  splay.c
CMimircache/headers/: const.h
CMimircache/profiler/: LRUProfiler.c  eviction_stat.c  generalProfiler.c  heatmap.c  heatmapThreadLRU.c  heatmapThreadNonLRU.c  partition.c  profilerUtils.c
CMimircache/profiler/include/: LRUProfiler.h  eviction_stat.h  generalProfiler.h  heatmap.h  partition.h  profilerUtils.h
CMimircache/test/: LRUProfilerTest.c  generalProfilerTest.c  heatmapTest.c  readerTest.c
CMimircache/utils/: cleaner.c  logging.c  utils.c
CMimircache/utils/include/: cleaner.h  logging.h  utils.h
